describe today's changes

--- a/Class_1.ipynb
+++ b/Class_1.ipynb
@@ -482,6 +482,197 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b9681f2",
+   "metadata": {},
+   "source": [
+    "[9:04 am, 2/2/2026] Srilakshmi Trainer V Tricks Vijayanagar: | *Operator Type*                                          | *Associativity* | *Example*   | *Explanation*                      |\n",
+    "| ---------------------------------------------------------- | ----------------- | ------------- | ------------------------------------ |\n",
+    "| +, -, *, /, //, %, and, or, ==, > etc. | **Left to Right** | 10 - 4 + 2  | Evaluated as (10 - 4) + 2          |\n",
+    "| =, +=, -=, /=, etc.| **Right to Left** | x = y = 10  | Assigns 10 to y, then x          |\n",
+    "| ** (Exponentiation)| **Right to Left** | 2 ** 3 ** 2 | Evaluated as 2 ** (3 ** 2) = 512 |\n",
+    "| Unary operators (+x, -x, ~x)| *Right to Left* | -~5         | -(-6) = 6                        |\n",
+    "| *Precedence Level* | *Operators*                                           | *Example*       |             |    |\n",
+    "| -------------------- | ------------------------------------------------------- | ----------------- | ----------- | -- |\n",
+    "| 1                    | () Parentheses                                        | (3 + 2) * 4     |             |    |\n",
+    "| 2                    | ** Exponentiation                                     | 2 ** 3 ** 2     |             |    |\n",
+    "| 3                    | +x, -x, ~x Unary plus, minus, bitwise NOT             | -5, ~2        |             |    |\n",
+    "| 4                    | *, /, //, %                                           | 10 / 2 * 3      |             |    |\n",
+    "| 5                    | +, - (Addition, Subtraction)                          | 5 + 3 - 2       |             |    |\n",
+    "| 6                    | <<, >> (Bitwise shift)                                | 4 << 1          |             |    |\n",
+    "| 7                    | & Bitwise AND                                         | a & b           |             |    |\n",
+    "| 8                    | ^, `                                                  | ` Bitwise XOR, OR | a ^ b, a | b |\n",
+    "| 9                    | Comparison operators (<, >, <=, >=, !=, ==)           | a > b           |             |    |\n",
+    "| 10                   | not                                                   | not True        |             |    |\n",
+    "| 11                   | and                                                   | a and b         |             |    |\n",
+    "| 12                   | or                                                    | a or b          |             |    |\n",
+    "| 13                   | Assignment (=, +=, -= etc.)                           | x += 2          |             |    |\n",
+    "| 14                   | , (comma)                                             | a, b = 1, 2     |             |    |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5d64bea",
+   "metadata": {},
+   "source": [
+    "| *Aspect*                         | *Operator Precedence*                                                                        | *Operator Associativity*                                                                                            |\n",
+    "| ---------------------------------- | ---------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------- |\n",
+    "| *Meaning*                        | Decides *which operator is evaluated first* when multiple operators appear in an expression. | Decides *the order (direction)* in which operators of the *same precedence* are evaluated.                        |\n",
+    "| *Purpose*                        | To determine priority among different operators.                                             | To determine direction of execution when priority is the same.                                                      |\n",
+    "| *Example (different precedence)* | 2 + 3 * 4 → * has higher precedence, so → 2 + (3*4) → 14.                              | 10 - 5 + 2 → both - and + have same precedence, so associativity (left → right) decides → (10 - 5) + 2 → 7. |\n",
+    "| *Order of Importance*            | Multiplication, Division, etc. before Addition, Subtraction.                                   | Left-to-right or Right-to-left evaluation among same-level operators.                                                 |\n",
+    "| *Mnemonic*                       | “Who goes first.”                                                                              | “Which direction to go.”                                                                   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2b2eb73f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "p\n",
+      "p\n",
+      "l\n",
+      "e\n",
+      "e\n",
+      "app\n",
+      "ap\n",
+      "appl\n",
+      "apple\n"
+     ]
+    }
+   ],
+   "source": [
+    "#string\n",
+    "#indexing\n",
+    "\n",
+    "a=\"apple\"\n",
+    "print(a[0])\n",
+    "print(a[1])\n",
+    "print(a[2])\n",
+    "print(a[3])\n",
+    "print(a[4])\n",
+    "\n",
+    "\n",
+    "#negative indexing\n",
+    "print(a[-1])\n",
+    "\n",
+    "\n",
+    "#slicing \n",
+    "# #ranging strings from the given strings\n",
+    "\n",
+    "print(a[0:3])\n",
+    "print(a[0:2])\n",
+    "print(a[0:4])\n",
+    "print(a[0:5])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2b4831c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p\n",
+      "this is \n",
+      "tss\n"
+     ]
+    }
+   ],
+   "source": [
+    "#range=[start:stop:step]\n",
+    "b=\"this is python class 3\"\n",
+    "\n",
+    "\n",
+    "print(b[8])\n",
+    "print(b[0:8])\n",
+    "print(b[0:8:3])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c2c02d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e\n",
+      "l\n",
+      "p\n",
+      "p\n",
+      "a\n",
+      "apple\n",
+      "this is python class 3\n",
+      "3 ssalc nohtyp si siht\n"
+     ]
+    }
+   ],
+   "source": [
+    "#negative indexing\n",
+    "print(a[-1])\n",
+    "print(a[-2])\n",
+    "print(a[-3])\n",
+    "print(a[-4])\n",
+    "print(a[-5])\n",
+    "print(a[:])\n",
+    "print(b[0:])\n",
+    "print(b[::-1])      #reversing of a string(whole)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2f2f18b",
+   "metadata": {},
+   "source": [
+    "#ESCAPE SEQUENCE CHARACTERS\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "a177e200",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is also\n",
+      "a string\n",
+      "This is his book and his book's color is red\n",
+      "a string\n",
+      "second string\\\n",
+      "second st\tring\n",
+      "second\tstring\n",
+      "seconstring\n",
+      "second sring\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"This is also\\na string\") #\\n\n",
+    "print('This is his book and his book\\'s color is red')     #\\'  \n",
+    "print(\"This is \\ra string\")     #\\r carriage return\n",
+    "print(\"second string\\\\\")        #backslash\n",
+    "print(\"second st\\tring\")        #\\t tab\n",
+    "print(\"second\\tstring\")         #\\t tab\n",
+    "print(\"second\\bstring\")         #\\b backspace\n",
+    "print(\"second st\\bring\")        #\\b backspace\n"
+   ]
   }
  ],
  "metadata": {
