Describe today's changes

--- a/Class_1.ipynb
+++ b/Class_1.ipynb
@@ -673,6 +673,481 @@
     "print(\"second\\bstring\")         #\\b backspace\n",
     "print(\"second st\\bring\")        #\\b backspace\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e46395ce",
+   "metadata": {},
+   "source": [
+    "#list methods\n",
+    "append \n",
+    "remove \n",
+    "delete\n",
+    "extend\n",
+    "insert \n",
+    "pop\n",
+    "clear\n",
+    "index\n",
+    "count\n",
+    "sort\n",
+    "reverse\n",
+    "copy\n",
+    "deepcopy\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "cd5ec5b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "[1, 2, 3, 4, 5, [6, 7, 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[1,2,3,4]     #append - to add elements into the list\n",
+    "a.append(5)\n",
+    "print(a)\n",
+    "\n",
+    "b=[6,7,8]\n",
+    "a.append(b)\n",
+    "print(a)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a07322a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 5, 6]\n",
+      "[9, 10, 11, 1, 2, 3, 4, 5, 6, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#extend - to add multiple elements into the list\n",
+    "a=[1,2,3,4,5]\n",
+    "a.extend([6,5,6])\n",
+    "print(a)\n",
+    "\n",
+    "b=[9,10,11]\n",
+    "b.extend(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bee44d24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Index\n",
+    "\n",
+    "a=[1,2,3,4,5]\n",
+    "a.index(4)\n",
+    "\n",
+    "\n",
+    "#insert\n",
+    "\n",
+    "a.insert(0,1)       #insert(index position ,element to insert)\n",
+    "print(a)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3d9963de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 2, 3]\n",
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#pop\n",
+    "a.pop()\n",
+    "print(a)\n",
+    "a.pop(0)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3d0861e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#remove\n",
+    "a=[1,2,3,4,5]\n",
+    "a.remove(4)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d36a024f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#clear\n",
+    "a=[1,2,3,4,5]\n",
+    "a.clear()\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "306e8da7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#count\n",
+    "a=[1,2,3,4,5,6,7,8,8,9,10,11,43]\n",
+    "a.count(8)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1c4629a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 8, 9, 10, 11, 43]\n",
+      "[43, 11, 10, 9, 8, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 8, 9, 10, 11, 43]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#sort\n",
+    "a.sort()\n",
+    "print(a)\n",
+    "\n",
+    "a.sort(reverse=True)\n",
+    "print(a)\n",
+    "\n",
+    "a.reverse()\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "d659a11c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n",
+      "[1, 2, 3, 4, 5]\n",
+      "[1, 2, 3, 4]\n",
+      "[1, 2, 3, 4, [5, 6]]\n",
+      "[1, 2, 3, 4, [100, 6]]\n",
+      "[1, 2, 3, 4, [100, 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#copy\n",
+    "a=[1,2,3,4]\n",
+    "b=a.copy()\n",
+    "print(b)\n",
+    "\n",
+    "a.append(5)\n",
+    "print(a)\n",
+    "print(b)\n",
+    "\n",
+    "a=[1,2,3,4,[5,6]]\n",
+    "b=a.copy()\n",
+    "print(a)\n",
+    "b[4][0]=100    \n",
+    "print(b)\n",
+    "print(a)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dee4c5d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, [5, 6]]\n",
+      "[1, 2, 3, 4, [100, 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import copy     #deepcopy\n",
+    "a=[1,2,3,4,[5,6]]\n",
+    "b=copy.deepcopy(a)\n",
+    "print(b)\n",
+    "\n",
+    "b[4][0]=100     #position deepcopy\n",
+    "print(b)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "befab98a",
+   "metadata": {},
+   "source": [
+    "#built in functions that can be used within a list\n",
+    "del \n",
+    "len\n",
+    "max\n",
+    "min\n",
+    "sum\n",
+    "sorted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "eea7c189",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "25\n",
+      "8\n",
+      "1\n",
+      "[1, 2, 3, 4, 7, 8]\n",
+      "[1, 3, 2, 4, 6, 8]\n",
+      "[1, 2, 3, 4, 6, 8]\n",
+      "[1, 4, 7, 8]\n",
+      "[4, 7, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[1,2,3,4,7,8]\n",
+    "print(len(a))\n",
+    "\n",
+    "a=[1,2,3,4,7,8]\n",
+    "print(sum(a))\n",
+    "\n",
+    "a=[1,2,3,4,7,8]\n",
+    "print(max(a))\n",
+    "\n",
+    "\n",
+    "a=[1,2,3,4,7,8]\n",
+    "print(min(a))\n",
+    "\n",
+    "\n",
+    "a=[1,2,3,4,7,8]\n",
+    "print(sorted(a))\n",
+    "\n",
+    "a=[1,3,2,4,6,8]\n",
+    "new_a=sorted(a)\n",
+    "print(a)\n",
+    "print(new_a)\n",
+    "\n",
+    "\n",
+    "\n",
+    "a=[1,2,3,4,7,8]\n",
+    "del(a[1:3])\n",
+    "print(a)\n",
+    "\n",
+    "del(a[0])\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e2f3620",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#membership operators ***\n",
+    "#in and not in\n",
+    "a=[34,23,53]\n",
+    "print(34 in a)\n",
+    "print(35 in a)\n",
+    "print(35 not in a)\n",
+    "print(53 not in a)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f8fc353",
+   "metadata": {},
+   "source": [
+    "#TUPLES-\n",
+    "Tuples are ordered, heterogenous, immutable(not changeable),allows duplicates\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1efa50f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "<class 'tuple'>\n",
+      "1\n",
+      "(1, 2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=(1,2,3)\n",
+    "print(type(a))\n",
+    "\n",
+    "\n",
+    "a=(1,2,3,\"red\",1,2,3,4,5)\n",
+    "print(type(a))\n",
+    "\n",
+    "print(a[0])     #indexing\n",
+    "print(a[0:3])   #slicing\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dae5d15f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "4\n",
+      "<class 'tuple'>\n",
+      "6\n",
+      "7\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "#tuple - methods are count,index\n",
+    "\n",
+    "a=(3,4,3,3,6,5,7,4,3,6,)\n",
+    "print(a.count(3))\n",
+    "print(a.index(6))\n",
+    "\n",
+    "\n",
+    "\n",
+    "t=6,7,8     #tuple packing (packing all given elements)\n",
+    "print(type(t))\n",
+    "\n",
+    "a,b,c=t     #tuple unpacking\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "19f6e499",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "8\n",
+      "3\n",
+      "31\n"
+     ]
+    }
+   ],
+   "source": [
+    "#built in functions that can be used for tuple\n",
+    "a=(3,4,6,7,8,3)\n",
+    "print(len(a))\n",
+    "print(max(a))\n",
+    "print(min(a))\n",
+    "print(sum(a))\n"
+   ]
   }
  ],
  "metadata": {
