Describe today's changes

--- a/Class_1.ipynb
+++ b/Class_1.ipynb
@@ -1148,6 +1148,270 @@
     "print(min(a))\n",
     "print(sum(a))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02a4dac9",
+   "metadata": {},
+   "source": [
+    "#Sets -\n",
+    "\n",
+    " items are unordered, heterogenous, elements must be unique, duplicates are not allowed, elements must be immutable\n",
+    " \n",
+    " \n",
+    " HASHABILITY- elements stored within the set must be immutable which means hashability is followed\n",
+    " an element is called hashable when it is immutable type znd can be stored within a set. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c89e34c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'set'>\n",
+      "<class 'set'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#defining a set\n",
+    "a={\"Monday\",2,4,2.5,True,4+2j,2,4}\n",
+    "print(type(a))\n",
+    "\n",
+    "b=set([\"tuesday\",2,2.5,False,3+4j])     #set method\n",
+    "print(type(b))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b2191fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 2, 1, 'Monday', 'mONDAY']\n",
+      "{1, 2, 3, 4, 5, 'Monday', 'mONDAY'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[1,2,3,4,5,2,1,\"Monday\",\"mONDAY\"]\n",
+    "print(a)\n",
+    "\n",
+    "b=set(a)        #conversion of list to set\n",
+    "print(b)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4052c824",
+   "metadata": {},
+   "source": [
+    "#SET operations\n",
+    "\n",
+    "union\n",
+    "intersection \n",
+    "difference\n",
+    "symmetric difference\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a9a67aea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{16, 54, 12, 13, 14, 15}\n",
+      "set()\n",
+      "{12, 13, 54}\n",
+      "{12, 13, 14, 15, 16, 54}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a={12,13,54}\n",
+    "b={14,15,16}\n",
+    "print(a|b)      #union of two set\n",
+    "\n",
+    "print(a & b)    #intersection of two sets\n",
+    "print(a-b)      #difference (in a but not in b)\n",
+    "print(a^b)      #symmetric difference (not common)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0a457f6",
+   "metadata": {},
+   "source": [
+    "#set methods\n",
+    "add\n",
+    "update\n",
+    "remove \n",
+    "discard\n",
+    "pop\n",
+    "clear\n",
+    "issubset\n",
+    "issuperset\n",
+    "isdisjoint\n",
+    "copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0adce75",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4}\n",
+      "{1, 2, 3, 4, 6, 7, 8, 9, 10, 11, 12}\n",
+      "{1, 2}\n",
+      "{1, 3}\n",
+      "{2, 3}\n",
+      "set()\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#add\n",
+    "s={1,2,3}\n",
+    "s.add(4)\n",
+    "print(s)\n",
+    "\n",
+    "\n",
+    "#update\n",
+    "s={1,2,3}\n",
+    "s.update([2,4,6])\n",
+    "s.update([7,8,9])\n",
+    "s.update((10,11,12))\n",
+    "print(s)\n",
+    "\n",
+    "#remove\n",
+    "s={1,2,3}\n",
+    "s.remove(3)\n",
+    "print(s)\n",
+    "\n",
+    "\n",
+    "#discard\n",
+    "s={1,2,3}\n",
+    "s.discard(2)\n",
+    "print(s)\n",
+    "\n",
+    "#pop\n",
+    "s={1,2,3}\n",
+    "s.pop()\n",
+    "print(s)\n",
+    "\n",
+    "#clear\n",
+    "s={1,2,3}\n",
+    "s.clear()\n",
+    "print(s)\n",
+    "\n",
+    "\n",
+    "#issubset\n",
+    "s={1,2,3}\n",
+    "t={1,2,3,4,5,6}\n",
+    "u={4,5,6}\n",
+    "print(s.issubset(t))\n",
+    "print(t.issuperset(s))\n",
+    "print(s.isdisjoint(u))\n",
+    "\n",
+    "#copy\n",
+    "b=a.copy()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f027ff2",
+   "metadata": {},
+   "source": [
+    "#update operations\n",
+    "difference_update\n",
+    "intersection_update\n",
+    "symmetric_difference_update\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4e62d6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 4, 5}\n",
+      "{2, 3}\n",
+      "{1, 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a={1,2,3,4,5}\n",
+    "b={2,3}\n",
+    "a.difference_update(b)\n",
+    "print(a)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "a={1,2,3,4,5}\n",
+    "b={2,3}\n",
+    "a.intersection_update(b)\n",
+    "print(a)\n",
+    "\n",
+    "\n",
+    "\n",
+    "a={1,2,3}\n",
+    "b={2,3,4}\n",
+    "a.symmetric_difference_update(b)        #removes elements present in both sets\n",
+    "print(a)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "ad8fbb72",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "3\n",
+      "1\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#built in functions with sets\n",
+    "print(len(s))\n",
+    "print(max(s))\n",
+    "print(min(s))\n",
+    "print(sum(s))\n"
+   ]
   }
  ],
  "metadata": {
