Describe today's changes

--- a/Data types.ipynb
+++ b/Data types.ipynb
@@ -1390,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "ad8fbb72",
    "metadata": {},
    "outputs": [
@@ -1410,7 +1410,7 @@
     "print(len(s))\n",
     "print(max(s))\n",
     "print(min(s))\n",
-    "print(sum(s))\n"
+    "print(sum(s))"
    ]
   }
  ],
