describe today's changes

--- a/conditional statements.ipynb
+++ b/conditional statements.ipynb
@@ -733,6 +733,203 @@
     "    case _:\n",
     "        print(\"tier 2 city\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b0e1da5",
+   "metadata": {},
+   "source": [
+    "values considered false in python\n",
+    "0 \n",
+    "0.0\n",
+    "\"\"\n",
+    "[]\n",
+    "{}\n",
+    "None\n",
+    "False\n",
+    "\n",
+    "everything else is true\n",
+    "\n",
+    "datasets are mostly full of blanks, nulls and empty collection so truthy/falsy helps detect them quickly\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "69c4391d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "block did not execute\n"
+     ]
+    }
+   ],
+   "source": [
+    "num=0\n",
+    "if num:\n",
+    "    print(\"block executed\")\n",
+    "else:\n",
+    "    print(\"block did not execute\")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "40aecf71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "block executed\n"
+     ]
+    }
+   ],
+   "source": [
+    "num=6\n",
+    "if num:\n",
+    "    print(\"block executed\")\n",
+    "else:\n",
+    "    print(\"block did not execute\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "907fe08b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name not exist\n"
+     ]
+    }
+   ],
+   "source": [
+    "name=\"\"\n",
+    "if name:\n",
+    "    print(\"name existed\")\n",
+    "else:\n",
+    "    print(\"name not exist\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "302b8808",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name existed\n"
+     ]
+    }
+   ],
+   "source": [
+    "name=\"s\"\n",
+    "if name:\n",
+    "    print(\"name existed\")\n",
+    "else:\n",
+    "    print(\"name not exist\")  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "29c08cb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "value does not exist\n"
+     ]
+    }
+   ],
+   "source": [
+    "value=None\n",
+    "if value:\n",
+    "    print(\"value existed\")\n",
+    "else:\n",
+    "    print(\"value does not exist\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9e7210c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data do not exist\n"
+     ]
+    }
+   ],
+   "source": [
+    "rows=[]\n",
+    "if rows:\n",
+    "    print(\"data exist\")\n",
+    "else:\n",
+    "    print(\"data do not exist\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "163bc0ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "valid\n"
+     ]
+    }
+   ],
+   "source": [
+    "value=input(\"enter data\")       #here anything apart from no data as in empty data is taken as valid (validation)\n",
+    "if not value:\n",
+    "    print(\"missing\")\n",
+    "else:\n",
+    "    print(\"valid\")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b69a0ff9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "welcome aboard\n"
+     ]
+    }
+   ],
+   "source": [
+    "email=input(\"enter your email\")\n",
+    "if not email:\n",
+    "    print(\"email required\")\n",
+    "else:\n",
+    "    print(\"welcome aboard\")    "
+   ]
   }
  ],
  "metadata": {
