--- a/datastructures2.ipynb
+++ b/datastructures2.ipynb
@@ -805,7 +805,7 @@
     "company={\"emp1\":{\"name\":\"alex\",\"salary\":12300},\n",
     "         {\"emp2\":{\"name\":\"sam\",\"salary\":60000}}\n",
     "         }\n",
-    "print(salary[1])"
+    "print(company[1])"
    ]
   },
   {
